--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ li {
 	text-transform:uppercase;
   	width: 100%;
   	height: 500px;
-  	background-image:url(merida-2-monu.jpg);
+  	background-image:url(legoImage.jpg);
   	background-repeat: no-repeat;
   	background-position: center;
 }
