--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ li {
 .menu {
 	text-align:right;
 	font-size:120%;
+	position: fixed;
+  	top: 0;
+	width: 100%;
+}
+
+
+.menu ul {
+  	background-color: #f5f5dc;
 }
 
 .menu li{
@@ -37,7 +45,7 @@ li {
 	text-transform:uppercase;
   	width: 100%;
   	height: 500px;
-  	background-image:url(legoImage.jpg);
+  	background-image:url(AHImage.jpg);
   	background-repeat: no-repeat;
   	background-position: center;
 }
