--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ h1 {
 	width:100%;
 }
 
+
+p {
+	width:100%;
+	margin-left: auto;
+    	margin-right: auto;
+}
+
 li {
 	margin:10px;
 }
@@ -22,7 +29,7 @@ li {
 
 
 .menu ul {
-  	background-color: #f5f5dc;
+  	background-color: #dcecf5;
 }
 
 .menu li{
@@ -51,8 +58,8 @@ li {
 	color: white;
 	text-transform:uppercase;
   	width: 100%;
-  	height: 500px;
-  	background-image:url(AHImage.jpg);
+  	height: 60px;
+  	/*background-image:url(URJC_photo1.jpg);*/
   	background-repeat: no-repeat;
   	background-position: center;
 }
@@ -62,4 +69,56 @@ li {
 	font-size:250%;
 	border:none;
 	margin-left: 20px;
+}
+
+
+/* Create three unequal columns that floats next to each other */
+.column {
+  float: left;
+  padding: 10px;
+  /*height: 300px; Should be removed. Only for demonstration */
+}
+
+.left{
+  width: 10%;
+}
+
+.right {
+  width: 15%;
+}
+
+.middle {
+  width: 75%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+
+
+.middle h1 {
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-color: #000;
+	width:100%;
+}
+
+
+.middle p {
+	width:100%;
+	margin-left: auto;
+    	margin-right: auto;
+}
+
+.middle li {
+	margin:10px;
+}
+
+.middle img {
+  border-radius: 10%;
 }
